# Tongues

./: CNAME  README.md  app.py  custom.css  custom.js  index.html  overview.html  pyproject.toml  requirements.txt  run.html  screenshots.html  strategy.html  technical.html
old code/: app.py  lseg_client.py  lseg_worker.py
src/: decision_engine.py  lseg_worker.py
src/deviltongues/: utilities.py
src/example files/: helper_option_volatility_greeks.py  vol_smile.ipynb
src/static/: index.html
